src/components/Project/style.css
.projectCrd{
    display: flex;
    flex: 2 70%;
    padding: 30px;
    align-items: center;
}

#work {
    margin: 0 auto;
    height: fit-content;
}

.flip-card {
    background-color: transparent;
    width: 400px;
    height: 400px;
    perspective: 1000px;
  }
  
  .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.6s;
    transform-style: preserve-3d;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  }
  .flip-card-front img{
      height: 100%;
      width: 100%;
  }
  .flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
  }
  
  .flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
  }
  
  .flip-card-front {
    background-color: #bbb;
    color: black;
  }
  
  .flip-card-back {
    background-color: #2980b9;
    color: white;
    transform: rotateY(180deg);
    padding: 30px 20px;
  }
  .flip-card-back div {
      padding: 10px;
  }

